--- a/src/miniapp/pages/index/index.wxml
+++ b/src/miniapp/pages/index/index.wxml
@@ -1,12 +1,3 @@
-<!--index.wxml-->
-  <!-- <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view> -->
-  <van-row>
-    <van-col span="4">4</van-col>
-    <van-col span="10" offset="4">10</van-col>
-  </van-row>
+<scroll-view>
+  <image src='{{imageList[0]}}' bindtap="click"></image>
+</scroll-view> 
