--- a/src/miniapp/pages/index/index.wxss
+++ b/src/miniapp/pages/index/index.wxss
@@ -1,19 +1,76 @@
 /**index.wxss**/
 .container {
-  padding: 20rpx 50rpx;
+  padding: 40rpx 0;
   background-image: url("https://liji-image.oss-cn-hongkong.aliyuncs.com/backgroundImage.jpg?x-oss-process=image/quality,Q_50/auto-orient,1");
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 28rpx;
 }
+.welcome {
+  font-size: 13px;
+  text-align: center;
+}
+
+.title {
+  font-size: 36rpx;
+  text-align: center;
+  margin-bottom: 20rpx;
+}
+
+.container .sub-container {
+  padding: 0 66rpx;
+}
+
 .image-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 40rpx;
 }
-.image-container image {
-  width: 275rpx;
-  height: 275rpx;
+
+.image-container .image-box {
+  position: relative;
+  margin-bottom: 50rpx;
+  overflow: hidden;
+  border-radius: 16rpx;
+}
+
+.image-container .image-box .pic {
+  width: 250rpx;
+  height: 230rpx;
+  filter: blur(15rpx);
+  border-radius: 16rpx;
+}
+
+
+.image-container .image-box .icon {
+  width: 50rpx;
+  height: 50rpx;
+  position: absolute;
+  top: 90rpx;
+  left: 100rpx;
+}
+
+.reward-container {
+
+}
+
+.reward-container .reward-button {
+  width: 100%;
+  color: #fff;
+  background-color: #52A5E5;
+  margin-bottom: 12rpx;
+}
+
+.complete-container {
+  margin-top: 30rpx;
+
+}
+
+.complete-container .complete-person {
+  display: flex;
+  justify-content: space-between;
+  height: 60rpx;
+  line-height: 60rpx;
+  font-size: 13px;
 }
