--- a/src/miniapp/pages/index/index.wxss
+++ b/src/miniapp/pages/index/index.wxss
@@ -43,6 +43,11 @@
   border-radius: 16rpx;
 }
 
+.image-container .image-box .full-pic {
+  width: 250rpx;
+  height: 230rpx;
+  border-radius: 16rpx;
+}
 
 .image-container .image-box .icon {
   width: 50rpx;
@@ -73,5 +78,11 @@
   justify-content: space-between;
   height: 60rpx;
   line-height: 60rpx;
+  font-size: 13px;
+}
+
+.popup {
+  color: #000;
+  padding: 40rpx;
   font-size: 13px;
 }
