--- a/src/miniapp/pages/task1/task1.wxml
+++ b/src/miniapp/pages/task1/task1.wxml
@@ -1,2 +1,30 @@
-<!--pages/task1/task1.wxml-->
-<text>pages/task1/task1.wxml</text>
+<form bindsubmit="formSubmit">
+  <van-toast id="van-toast" />
+  <view class="page-section">
+    <view class="weui-cells__title">新郎姓名</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" auto-focus name="husband" />
+      </view>
+    </view>
+  </view>
+  <view class="page-section">
+    <view class="weui-cells__title">新娘姓名</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" name="wife" />
+      </view>
+    </view>
+  </view>
+  <view class="page-section">
+    <view class="weui-cells__title">婚礼地址</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" name="area" />
+      </view>
+    </view>
+  </view>
+  <view class="btn-area">
+    <button formType="submit" type='primary' >确认</button>
+  </view>
+</form>
