--- a/src/miniapp/pages/index/index.wxss
+++ b/src/miniapp/pages/index/index.wxss
@@ -2,11 +2,12 @@
 @import "../../resouces/weui.wxss";
 .container {
   padding: 40rpx 0;
-  background-image: url("https://liji-image.oss-cn-hongkong.aliyuncs.com/backgroundImage.jpg?x-oss-process=image/quality,Q_40/auto-orient,1");
+  background-image: url("https://liji-image.oss-cn-hongkong.aliyuncs.com/backgroundImage.jpg?x-oss-process=image/resize,l_1080/quality,Q_70/auto-orient,1");
   background-size: cover;
   background-position-x:center; 
   background-repeat: no-repeat;
   color: #fff;
+  min-height: 100%;
 }
 .welcome {
   font-size: 13px;
