--- a/src/miniapp/pages/task1/task1.wxml
+++ b/src/miniapp/pages/task1/task1.wxml
@@ -20,7 +20,7 @@
     <view class="weui-cells__title">婚礼地址</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
-        <input class="weui-input" name="area" confirm-type="完成" bindconfirm="formSubmit"/>
+        <input class="weui-input" name="area" confirm-type="完成"/>
       </view>
     </view>
   </view>
