--- a/src/miniapp/pages/index/index.wxss
+++ b/src/miniapp/pages/index/index.wxss
@@ -10,8 +10,8 @@
   min-height: 100%;
 }
 .welcome {
-  font-size: 13px;
-  text-align: center;
+  font-size: 14px;
+  text-indent: 2em;
 }
 
 .title {
@@ -67,7 +67,8 @@
   width: 100%;
   color: #fff;
   background-color: #52A5E5;
-  margin-bottom: 12rpx;
+  margin-bottom: 24rpx;
+  margin-top: 20rpx;
 }
 
 .complete-container {
@@ -80,7 +81,7 @@
   justify-content: space-between;
   height: 60rpx;
   line-height: 60rpx;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .popup {
