--- a/src/miniapp/pages/auth/auth.wxml
+++ b/src/miniapp/pages/auth/auth.wxml
@@ -1,3 +1,3 @@
 <!--pages/auth/auth.wxml-->
-<image src='https://liji-image.oss-cn-hongkong.aliyuncs.com/%E8%8A%8A%E8%8A%8A%E6%87%92%E6%B4%8B%E6%B4%8B%E6%AD%A3%E9%9D%A2pdf.jpg?x-oss-process=image/quality,Q_30'></image>
+<image src='https://liji-image.oss-cn-hongkong.aliyuncs.com/%E8%8A%8A%E8%8A%8A%E6%87%92%E6%B4%8B%E6%B4%8B%E6%AD%A3%E9%9D%A2pdf.jpg?x-oss-process=image/quality,Q_30' mode='widthFix'></image>
  <button open-type="getUserInfo" type='primary' bindgetuserinfo="bindGetUserInfo">使用微信昵称提交答案</button>
