--- a/src/miniapp/pages/auth/auth.wxss
+++ b/src/miniapp/pages/auth/auth.wxss
@@ -2,11 +2,10 @@
 page {
   height: 100%;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
 }
 image {
   width: 100%;
-  flex: 1
 }
 button {
   margin: 50rpx 30rpx;
