--- a/src/miniapp/pages/task4/task4.wxss
+++ b/src/miniapp/pages/task4/task4.wxss
@@ -1,63 +1,29 @@
-/* pages/task4/task4.wxss */
-page, .root-container {
+page {
+  width: 100%;
+  height: 100%;
+}
+.container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .text-container {
-  margin-bottom: 20rpx;
+  margin-bottom: 40rpx;
 }
 
-.image-container {
-  width: 100%;
-  position: relative;
-}
-.image-container > image {
-  width: 100%;
-}
+.canvas-container {
+  width: 375px;
+  height: 375px;
+  background: url("https://liji-image-hangzhou.oss-cn-hangzhou.aliyuncs.com/dish.png") center center no-repeat;
+  background-size: 375px 375px;
 
-.dirty-container {
-  /*border: 1px solid red;*/
-  position: absolute;
-  width: 66%;
-  height: 66%;
-  top: 17%;
-  left: 17%;
-  display: flex;
-  flex-wrap: wrap;
-  /*overflow: hidden;*/
 }
-
-.dirty {
-  width: 33%;
-  height: 33%;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.dirty image{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.dirty .touch-item {
-  width: 25%;
-  height: 25%;
-  z-index: 1;
-}
-
-.dirty .touch-item.touch-item-show {
-  background-color: transparent;
-}
-
-.dirty .touch-item.touch-item-hidden {
-  background-color: #DADBD5;
+.canvas {
+  width: 375px;
+  height: 375px;
+  z-index: 100;
 }
