--- a/src/miniapp/pages/task2/task2.wxss
+++ b/src/miniapp/pages/task2/task2.wxss
@@ -6,6 +6,10 @@ page {
 .container {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .canvas-container {
