莫名其妙的显示问题

--- a/src/miniapp/pages/index/index.wxml
+++ b/src/miniapp/pages/index/index.wxml
@@ -35,10 +35,10 @@
     </view>
     <view class="complete-person" wx:for="{{completeList}}" wx:key="{{item.openid}}">
       <text>{{item.name}}</text>
-      <text>
-        {{item.taskStrTime}}已收集{{item.taskList.length}}张
-        <!--<text wx:if="{{item.rewardStatus === 1}}">（已兑奖）</text>-->
-      </text>
+      <view>
+        <text>{{item.taskStrTime}}已收集{{item.taskList.length}}张</text>
+        <text wx:if="{{item.rewardStatus === 1}}">（已兑奖）</text>
+      </view>
     </view>
   </view>
 </scroll-view>
