--- a/src/miniapp/pages/index/index.wxss
+++ b/src/miniapp/pages/index/index.wxss
@@ -77,10 +77,9 @@
 
 .complete-container {
   margin-top: 30rpx;
-
 }
 
-.complete-container .complete-person {
+.complete-person {
   display: flex;
   justify-content: space-between;
   height: 60rpx;
