--- a/src/miniapp/pages/index/index.wxml
+++ b/src/miniapp/pages/index/index.wxml
@@ -21,12 +21,12 @@
       </view>
     </view>
   </view>
-  <view class="reward-container sub-container">
+  <view class="reward-container sub-container" wx:if="{{userInfo.rewardStatus === 0}}">
     <view>
       <view class='title'>奖励</view>
-      <button class='reward-button' type="default"  data-category="红包" bindtap="getReward">新郎手中的大红包</button>
+      <button class='reward-button' type="default"  data-category="大红包" bindtap="getReward">新郎手中的大红包</button>
       <button class='reward-button' type="default"  data-category="火锅" bindtap="getReward">和新婚夫妇吃火锅</button>
-      <button class='reward-button' type="default"  data-category="酒" bindtap="getReward">新郎和伴郎连干三杯</button>
+      <button class='reward-button' type="default"  data-category="新郎喝酒" bindtap="getReward">新郎和伴郎连干三杯</button>
     </view>
   </view>
   <view class='complete-container sub-container' wx:if="{{completeList.length > 0}}">
@@ -34,10 +34,11 @@
       完成列表
     </view>
     <view class="complete-person" wx:for="{{completeList}}" wx:key="{{item.openid}}">
-      <text>{{item.name}}</text>
+      <view>{{item.name}}
+        <text wx:if="{{item.rewardStatus === 1}}">（已兑奖）</text>
+      </view>
       <view>
         <text>{{item.taskStrTime}}已收集{{item.taskList.length}}张</text>
-        <text wx:if="{{item.rewardStatus === 1}}">（已兑奖）</text>
       </view>
     </view>
   </view>
