--- a/src/miniapp/pages/task4/task4.wxss
+++ b/src/miniapp/pages/task4/task4.wxss
@@ -27,3 +27,12 @@ page {
   height: 375px;
   z-index: 100;
 }
+
+.target {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
