--- a/src/miniapp/app.wxss
+++ b/src/miniapp/app.wxss
@@ -1,1 +1,16 @@
 /**app.wxss**/
+
+.target {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.task-text-container {
+  margin-bottom: 20px;
+  padding: 0 20px;
+
+}
