--- a/src/miniapp/pages/task5/task5.wxml
+++ b/src/miniapp/pages/task5/task5.wxml
@@ -1,8 +1,10 @@
-<view>
-  <view>
-    ycy又惹小芊生气了，快点击说对不起吧
+<view class="container">
+  <view class="target">
+    <view>倒计时：{{time}}</view>
+    <view>分数：{{score}}/{{total}}</view>
   </view>
-  <view>
-
+  <view class="task-text-container">
+    "ycy又惹小芊生气了，快点击说对不起吧"
   </view>
+  <button type="default" bindtap="sorry">对不起</button>
 </view>
