--- a/src/miniapp/pages/task5/task5.wxss
+++ b/src/miniapp/pages/task5/task5.wxss
@@ -1,1 +1,13 @@
-/* pages/task5/task5.wxss */
+page {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
