--- a/src/miniapp/pages/task6/task6.wxss
+++ b/src/miniapp/pages/task6/task6.wxss
@@ -1,13 +1,4 @@
-page {
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@import "../../resouces/weui.wxss";
+.btn-area {
+  padding: 40rpx 20rpx;
 }
