--- a/src/miniapp/pages/task4/task4.wxml
+++ b/src/miniapp/pages/task4/task4.wxml
@@ -5,7 +5,7 @@
   <view></view>
 </view>
   <view class="task-text-container">
-    "要把碗洗干净了，生活才会更美好"
+    要把碗洗干净了，生活才会更美好
   </view>
   <view class="canvas-container">
     <canvas class="canvas" canvas-id="task4"
