--- a/src/miniapp/pages/task3/task3.wxml
+++ b/src/miniapp/pages/task3/task3.wxml
@@ -4,7 +4,7 @@
     <view>分数：{{score}}/{{total}}</view>
   </view>
   <view class="task-text-container">
-    "小芊生气了，不停的向ycy扔衣服，接住衣服吧"
+    ycy晚上回家晚了，不要碰到任何东西，否则会吵醒小芊
   </view>
   <view class="canvas-container">
     <canvas class="canvas" canvas-id="task3"
