--- a/src/miniapp/pages/index/index.wxml
+++ b/src/miniapp/pages/index/index.wxml
@@ -24,7 +24,7 @@
   <view class="reward-container sub-container" wx:if="{{userInfo.rewardStatus === 0}}">
     <view>
       <view class='title'>奖励</view>
-      <button class='reward-button' type="default"  data-category="大红包" bindtap="getReward">新郎手中的大红包</button>
+      <button class='reward-button' type="default"  data-category="红包" bindtap="getReward">新郎手中的大红包</button>
       <button class='reward-button' type="default"  data-category="火锅" bindtap="getReward">和新婚夫妇吃火锅</button>
       <button class='reward-button' type="default"  data-category="喝酒" bindtap="getReward">新郎和伴郎连干三杯</button>
     </view>
